--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.0.1",
     "@schematics/angular": "^15.2.5",
     "alife-file-to-base64": "0.0.4",
+    "firebase": "^9.19.1",
     "ngx-dry": "0.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
